--- a/char_sheet/html/character_info.html
+++ b/char_sheet/html/character_info.html
@@ -6,7 +6,7 @@
             <td>Background</td>
         </tr>
         <tr>
-            <td><input type="text" name="name" /></td>
+            <td><input type="text" name="attr_character_name" /></td>
             <td><input type="text" name="attr_race" /></td>
             <td><input type="text" name="attr_bg" /></td>
         </tr>
