--- a/char_sheet/html/magic_header.html
+++ b/char_sheet/html/magic_header.html
@@ -1,4 +1,4 @@
-<div class="sheet-2colrow">
+<div class="sheet-3colrow">
     <div class="sheet-col">
         <div>
             <table>
@@ -35,20 +35,6 @@
                 </tr>
             </table>
         </div>
-        <div>
-            <table>
-                <tr class="table_header_details">
-                    <td></td>
-                    <td>Current</td>
-                    <td>Max</td>
-                </tr>
-                <tr>
-                    <td class="skill_name">Resonance</td>
-                    <td><input class="skinny_number" type="number" name="attr_powers_resonance_current" value="0"/></td>
-                    <td><input class="skinny_number" type="number" name="attr_powers_resonance_max" value="(@{Level} + @{attr_Charisma_mod})" disabled="true" /></td>
-                </tr>
-            </table>
-        </div>
     </div>
     <div class="sheet-col">
         <div>
@@ -82,5 +68,19 @@
                 </tr>
             </table>
         </div>
+    </div>
+    <div class="sheet-col">
+        <table>
+            <tr class="table_header_details">
+                <td></td>
+                <td>Current</td>
+                <td>Max</td>
+            </tr>
+            <tr>
+                <td class="skill_name">Resonance</td>
+                <td><input class="skinny_number" type="number" name="attr_powers_resonance_current" value="0"/></td>
+                <td><input class="skinny_number" type="number" name="attr_powers_resonance_max" value="(@{Level} + @{attr_Charisma_mod})" disabled="true" /></td>
+            </tr>
+        </table>
     </div>
 </div>
