--- a/char_sheet/html/attacks_block.html
+++ b/char_sheet/html/attacks_block.html
@@ -1,8 +1,8 @@
 <fieldset class="repeating_attacks">
     <td><input type="text" name="attr_attackname" class="small_name_width" /></td>
-    <td>{% raw %}<button class="button_text" type="roll" value="&{template:attack} {{name=@{attackname}}} {{attack=[[(1d20 + @{attacktotal})]]}} {{damage=[[@{attack_dmg_dice}+@{attack_dmg_attr}+@{attack_dmg_item}+@{attack_dmg_misc}]]}} {{actions=@{attack_actions}}} " ><span class="button_text_font">1st Attack</span></button>{% endraw %}</td>
-    <td>{% raw %}<button class="button_text" type="roll" value="&{template:attack} {{name=@{attackname}}} {{attack=[[(1d20 + @{attacktotal} + @{multi_attack})]]}} {{damage=[[@{attack_dmg_dice}+@{attack_dmg_attr}+@{attack_dmg_item}+@{attack_dmg_misc}]]}} {{actions=@{attack_actions}}} " ><span class="button_text_font">2nd Attack</span></button>{% endraw %}</td>
-    <td>{% raw %}<button class="button_text" type="roll" value="&{template:attack} {{name=@{attackname}}} {{attack=[[(1d20 + @{attacktotal} + @{multi_attack} * 2)]]}} {{damage=[[@{attack_dmg_dice}+@{attack_dmg_attr}+@{attack_dmg_item}+@{attack_dmg_misc}]]}} {{actions=@{attack_actions}}} " ><span class="button_text_font">3rd Attack</span></button>{% endraw %}</td>
+    <td>{% raw %}<button class="button_text" type="roll" value="&{template:attack} {{character=@{character_name}} {{name=@{attackname}}} {{attack=[[(1d20 + @{attacktotal})]]}} {{damage=[[@{attack_dmg_dice}+@{attack_dmg_attr}+@{attack_dmg_item}+@{attack_dmg_misc}]]}} {{actions=@{attack_actions}}} " ><span class="button_text_font">1st Attack</span></button>{% endraw %}</td>
+    <td>{% raw %}<button class="button_text" type="roll" value="&{template:attack} {{character=@{character_name}} {{name=@{attackname}}} {{attack=[[(1d20 + @{attacktotal} + @{multi_attack})]]}} {{damage=[[@{attack_dmg_dice}+@{attack_dmg_attr}+@{attack_dmg_item}+@{attack_dmg_misc}]]}} {{actions=@{attack_actions}}} " ><span class="button_text_font">2nd Attack</span></button>{% endraw %}</td>
+    <td>{% raw %}<button class="button_text" type="roll" value="&{template:attack} {{character=@{character_name}} {{name=@{attackname}}} {{attack=[[(1d20 + @{attacktotal} + @{multi_attack} * 2)]]}} {{damage=[[@{attack_dmg_dice}+@{attack_dmg_attr}+@{attack_dmg_item}+@{attack_dmg_misc}]]}} {{actions=@{attack_actions}}} " ><span class="button_text_font">3rd Attack</span></button>{% endraw %}</td>
     <input type="checkbox" class="sheet-block-switch config_checkbox"> <span class="config_checkbox_icon">y</span>
     <div class="sheet-block-b">
         <table>
@@ -67,11 +67,8 @@
                 <td>Properties</td>
             </tr>
             <tr>
-                <td><select name="attr_attack_actions" class="teml_text" >
-                    <option value="Free">0</option>
-                    <option value="(A)">1</option>
-                    <option value="(A)(A)">2</option>
-                    <option value="(A)(A)(A)">3</option>
+                <td><select name="attr_attack_actions" class="action_select" >
+                    {{ action_options|safe }}
                 </select></td>
                 <td><input type="text" name="attr_attacktraits" /></td>
             </tr>
